WindowsFormsApp1/Utils/GrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar.g4 by ANTLR 4.9.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace WindowsFormsApp1
{
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
[System.CLSCompliant(false)]
public partial class GrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		AND=1, ARRAY=2, BEGIN=3, BOOLEAN=4, CASE=5, ENDCASE=6, CHAR=7, CHR=8, 
		CONST=9, DIV=10, DO=11, DOWNTO=12, ELSE=13, EXIT=14, END=15, FILE=16, 
		ENDFOR=17, FOR=18, FUNCTION=19, ENDFUNCTION=20, GOTO=21, IF=22, ENDIF=23, 
		IN=24, INTEGER=25, LABEL=26, MOD=27, NIL=28, NOT=29, OF=30, OR=31, PACKED=32, 
		PROCEDURE=33, PROGRAM=34, REAL=35, RECORD=36, ENDREPEAT=37, REPEAT=38, 
		SET=39, THEN=40, TO=41, BY=42, TYPE=43, UNTIL=44, VAR=45, ENDVAR=46, WHILE=47, 
		ENDWHILE=48, WITH=49, PLUS=50, MINUS=51, STAR=52, SLASH=53, UNDER=54, 
		ASSIGN=55, COMMA=56, SEMI=57, COLON=58, EQUAL=59, NOT_EQUAL=60, LT=61, 
		LE=62, GE=63, GT=64, LPAREN=65, RPAREN=66, LBRACK=67, LBRACK2=68, RBRACK=69, 
		RBRACK2=70, POINTER=71, AT=72, DOT=73, DOTDOT=74, LCURLY=75, RCURLY=76, 
		UNIT=77, INTERFACE=78, USES=79, STRING=80, IMPLEMENTATION=81, TRUE=82, 
		FALSE=83, WS=84, COMMENT_1=85, COMMENT_2=86, IDENT=87, STRING_LITERAL=88, 
		NUM_INT=89, NUM_REAL=90;
	public const int
		RULE_function = 0, RULE_functionHeading = 1, RULE_identifier = 2, RULE_block = 3, 
		RULE_usesUnitsPart = 4, RULE_labelDeclarationPart = 5, RULE_label = 6, 
		RULE_constantDefinitionPart = 7, RULE_constantDefinition = 8, RULE_constantChr = 9, 
		RULE_constant = 10, RULE_unsignedNumber = 11, RULE_unsignedInteger = 12, 
		RULE_unsignedReal = 13, RULE_sign = 14, RULE_bool_ = 15, RULE_string = 16, 
		RULE_typeDefinitionPart = 17, RULE_typeDefinition = 18, RULE_procedureType = 19, 
		RULE_type_ = 20, RULE_simpleType = 21, RULE_scalarType = 22, RULE_subrangeType = 23, 
		RULE_typeIdentifier = 24, RULE_structuredType = 25, RULE_unpackedStructuredType = 26, 
		RULE_stringtype = 27, RULE_arrayType = 28, RULE_typeList = 29, RULE_indexType = 30, 
		RULE_componentType = 31, RULE_recordType = 32, RULE_fieldList = 33, RULE_fixedPart = 34, 
		RULE_recordSection = 35, RULE_variantPart = 36, RULE_tag = 37, RULE_variant = 38, 
		RULE_setType = 39, RULE_baseType = 40, RULE_fileType = 41, RULE_pointerType = 42, 
		RULE_variableDeclarationPart = 43, RULE_variableDeclaration = 44, RULE_procedureDeclarationPart = 45, 
		RULE_procedureDeclaration = 46, RULE_formalParameterList = 47, RULE_formalParameterSection = 48, 
		RULE_parameterGroup = 49, RULE_identifierList = 50, RULE_constList = 51, 
		RULE_resultType = 52, RULE_statement = 53, RULE_unlabelledStatement = 54, 
		RULE_simpleStatement = 55, RULE_assignmentStatement = 56, RULE_variable = 57, 
		RULE_expression = 58, RULE_relationaloperator = 59, RULE_simpleExpression = 60, 
		RULE_additiveoperator = 61, RULE_term = 62, RULE_multiplicativeoperator = 63, 
		RULE_signedFactor = 64, RULE_factor = 65, RULE_unsignedConstant = 66, 
		RULE_functionDesignator = 67, RULE_parameterList = 68, RULE_set_ = 69, 
		RULE_elementList = 70, RULE_element = 71, RULE_procedureStatement = 72, 
		RULE_actualParameter = 73, RULE_parameterwidth = 74, RULE_gotoStatement = 75, 
		RULE_exitStatement = 76, RULE_emptyStatement_ = 77, RULE_empty_ = 78, 
		RULE_structuredStatement = 79, RULE_statements = 80, RULE_conditionalStatement = 81, 
		RULE_elseCaseEnd = 82, RULE_elseStatement = 83, RULE_ifStatement = 84, 
		RULE_caseStatement = 85, RULE_caseListElement = 86, RULE_repetetiveStatement = 87, 
		RULE_whileStatement = 88, RULE_repeatStatement = 89, RULE_forStatement = 90, 
		RULE_forList = 91, RULE_initialValue = 92, RULE_finalValue = 93, RULE_withStatement = 94, 
		RULE_recordVariableList = 95;
	public static readonly string[] ruleNames = {
		"function", "functionHeading", "identifier", "block", "usesUnitsPart", 
		"labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
		"constantChr", "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
		"sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", "procedureType", 
		"type_", "simpleType", "scalarType", "subrangeType", "typeIdentifier", 
		"structuredType", "unpackedStructuredType", "stringtype", "arrayType", 
		"typeList", "indexType", "componentType", "recordType", "fieldList", "fixedPart", 
		"recordSection", "variantPart", "tag", "variant", "setType", "baseType", 
		"fileType", "pointerType", "variableDeclarationPart", "variableDeclaration", 
		"procedureDeclarationPart", "procedureDeclaration", "formalParameterList", 
		"formalParameterSection", "parameterGroup", "identifierList", "constList", 
		"resultType", "statement", "unlabelledStatement", "simpleStatement", "assignmentStatement", 
		"variable", "expression", "relationaloperator", "simpleExpression", "additiveoperator", 
		"term", "multiplicativeoperator", "signedFactor", "factor", "unsignedConstant", 
		"functionDesignator", "parameterList", "set_", "elementList", "element", 
		"procedureStatement", "actualParameter", "parameterwidth", "gotoStatement", 
		"exitStatement", "emptyStatement_", "empty_", "structuredStatement", "statements", 
		"conditionalStatement", "elseCaseEnd", "elseStatement", "ifStatement", 
		"caseStatement", "caseListElement", "repetetiveStatement", "whileStatement", 
		"repeatStatement", "forStatement", "forList", "initialValue", "finalValue", 
		"withStatement", "recordVariableList"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "'+'", "'-'", "'*'", "'/'", "'_'", "':='", "','", "';'", "':'", 
		"'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", "'(.'", 
		"']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "ENDCASE", "CHAR", "CHR", 
		"CONST", "DIV", "DO", "DOWNTO", "ELSE", "EXIT", "END", "FILE", "ENDFOR", 
		"FOR", "FUNCTION", "ENDFUNCTION", "GOTO", "IF", "ENDIF", "IN", "INTEGER", 
		"LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", "PROCEDURE", "PROGRAM", 
		"REAL", "RECORD", "ENDREPEAT", "REPEAT", "SET", "THEN", "TO", "BY", "TYPE", 
		"UNTIL", "VAR", "ENDVAR", "WHILE", "ENDWHILE", "WITH", "PLUS", "MINUS", 
		"STAR", "SLASH", "UNDER", "ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", 
		"NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", "LBRACK2", 
		"RBRACK", "RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", "RCURLY", 
		"UNIT", "INTERFACE", "USES", "STRING", "IMPLEMENTATION", "TRUE", "FALSE", 
		"WS", "COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT", 
		"NUM_REAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Grammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FunctionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionHeadingContext functionHeading() {
			return GetRuleContext<FunctionHeadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDFUNCTION() { return GetToken(GrammarParser.ENDFUNCTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTERFACE() { return GetToken(GrammarParser.INTERFACE, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 0, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 192;
			functionHeading();
			State = 194;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INTERFACE) {
				{
				State = 193;
				Match(INTERFACE);
				}
			}

			State = 196;
			block();
			State = 197;
			Match(ENDFUNCTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionHeadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNCTION() { return GetToken(GrammarParser.FUNCTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public FunctionHeadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionHeading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterFunctionHeading(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitFunctionHeading(this);
		}
	}

	[RuleVersion(0)]
	public FunctionHeadingContext functionHeading() {
		FunctionHeadingContext _localctx = new FunctionHeadingContext(Context, State);
		EnterRule(_localctx, 2, RULE_functionHeading);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 199;
			Match(FUNCTION);
			State = 200;
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(GrammarParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitIdentifier(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(Context, State);
		EnterRule(_localctx, 4, RULE_identifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 202;
			Match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementsContext statements() {
			return GetRuleContext<StatementsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LabelDeclarationPartContext[] labelDeclarationPart() {
			return GetRuleContexts<LabelDeclarationPartContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LabelDeclarationPartContext labelDeclarationPart(int i) {
			return GetRuleContext<LabelDeclarationPartContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDefinitionPartContext[] constantDefinitionPart() {
			return GetRuleContexts<ConstantDefinitionPartContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDefinitionPartContext constantDefinitionPart(int i) {
			return GetRuleContext<ConstantDefinitionPartContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDefinitionPartContext[] typeDefinitionPart() {
			return GetRuleContexts<TypeDefinitionPartContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDefinitionPartContext typeDefinitionPart(int i) {
			return GetRuleContext<TypeDefinitionPartContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationPartContext[] variableDeclarationPart() {
			return GetRuleContexts<VariableDeclarationPartContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationPartContext variableDeclarationPart(int i) {
			return GetRuleContext<VariableDeclarationPartContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsesUnitsPartContext[] usesUnitsPart() {
			return GetRuleContexts<UsesUnitsPartContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsesUnitsPartContext usesUnitsPart(int i) {
			return GetRuleContext<UsesUnitsPartContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IMPLEMENTATION() { return GetTokens(GrammarParser.IMPLEMENTATION); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMPLEMENTATION(int i) {
			return GetToken(GrammarParser.IMPLEMENTATION, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 212;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << LABEL) | (1L << TYPE) | (1L << VAR))) != 0) || _la==USES || _la==IMPLEMENTATION) {
				{
				State = 210;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LABEL:
					{
					State = 204;
					labelDeclarationPart();
					}
					break;
				case CONST:
					{
					State = 205;
					constantDefinitionPart();
					}
					break;
				case TYPE:
					{
					State = 206;
					typeDefinitionPart();
					}
					break;
				case VAR:
					{
					State = 207;
					variableDeclarationPart();
					}
					break;
				case USES:
					{
					State = 208;
					usesUnitsPart();
					}
					break;
				case IMPLEMENTATION:
					{
					State = 209;
					Match(IMPLEMENTATION);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 214;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 215;
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsesUnitsPartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USES() { return GetToken(GrammarParser.USES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierListContext identifierList() {
			return GetRuleContext<IdentifierListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(GrammarParser.SEMI, 0); }
		public UsesUnitsPartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usesUnitsPart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.EnterUsesUnitsPart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGrammarListener typedListener = listener as IGrammarListener;
			if (typedListener != null) typedListener.ExitUsesUnitsPart(this);
		}
	}

	[RuleVersion(0)]
	public UsesUnitsPartContext usesUnitsPart() {
		UsesUnitsPartContext _localctx = new UsesUnitsPartContext(Context, State);
		EnterRule(_localctx, 8, RULE_usesUnitsPart);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 217;
			Match(USES);
			State = 218;
			identifierList();
			State = 219;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
